--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -116,9 +116,33 @@ intel:
       - time make -j4
       - time make -j4 install
       - time src/inq_unit_tests
-#      - time mpirun -np 2 --oversubscribe src/inq_unit_tests
-#      - time mpirun -np 3 --oversubscribe src/inq_unit_tests
-#      - time mpirun -np 4 --oversubscribe src/inq_unit_tests
+      - time mpirun -np 2 --oversubscribe src/inq_unit_tests
+      - time mpirun -np 3 --oversubscribe src/inq_unit_tests
+      - time mpirun -np 4 --oversubscribe src/inq_unit_tests
+      - time tests/hydrogen_local
+      - time tests/neon
+      - time tests/h2o_ground_state
+      - time tests/h2o_real_time
+      
+intel-fast:
+    stage: build
+    tags:
+      - intel_compiler
+    script:
+      - if [ -v UPDATE_MULTI ] ; then cd external_libs/multi && git checkout master && git pull && cd - ; fi
+      -  . /opt/intel/system_studio_2020/bin/compilervars.sh intel64
+      - mkdir build
+      - cd build
+      - export OMPI_CC=icc
+      - export OMPI_CXX=icpc
+      - export CXXFLAGS="-Ofast -Wall -Wextra -DNDEBUG"
+      - time ../configure --prefix=$HOME  || cat config.log
+      - time make -j4
+      - time make -j4 install
+      - time src/inq_unit_tests
+      - time mpirun -np 2 --oversubscribe src/inq_unit_tests
+      - time mpirun -np 3 --oversubscribe src/inq_unit_tests
+      - time mpirun -np 4 --oversubscribe src/inq_unit_tests
       - time tests/hydrogen_local
       - time tests/neon
       - time tests/h2o_ground_state
