--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ gcc:
       - mpic++ --version
       - mkdir build
       - cd build
-      - export CXXFLAGS="-O3 -pipe -Wall -Werror -Wpedantic -pedantic-errors  -Wextra -Wno-cast-function-type -Wno-error=cast-function-type -Wno-unused-parameter -Wno-error=unused-parameter"
+      - export CXXFLAGS="-O3 -pipe -Wall -Wextra -Werror -Wpedantic"
       - time ../configure --prefix=$HOME  || cat config.log
       - time make
       - time make -j4 install
@@ -93,7 +93,7 @@ gcc-fast:
       - mpic++ --version
       - mkdir build
       - cd build
-      - export CXXFLAGS="-Ofast -ffast-math -DNDEBUG -pipe -Wall -Werror -Wpedantic -pedantic-errors  -Wextra -Wno-cast-function-type -Wno-error=cast-function-type -Wno-unused-parameter -Wno-error=unused-parameter"
+      - export CXXFLAGS="-O3 -pipe -Wall -Wextra -Werror -Wpedantic"
       - time ../configure --prefix=$HOME  || cat config.log
       - time make
       - time make -j4 install
