--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -300,6 +300,24 @@ gcc-mpich-valgrind:
 #      - time tests/h2o_ground_state
 #      - time tests/h2o_real_time
 
+gnu:
+    stage: build
+    tags:
+      - intel_compiler
+    script:
+      - if [ -v UPDATE_MULTI ] ; then cd external_libs/multi && git checkout master && git pull && cd - ; fi
+      - cd ci
+      - ./cmake_gnu.sh
+      - cd src; ctest -V --timeout 180 -j 16; cd ..
+      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 2" ctest -V --timeout 180 -j 8; cd ..
+      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 3" ctest -V --timeout 180 -j 5; cd ..
+      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 4" ctest -V --timeout 180 -j 4; cd ..      
+      - time tests/hydrogen_local
+      - time tests/neon
+      - time tests/h2o_ground_state
+      - time tests/h2o_real_time
+      - time tests/silicon
+
 intel:
     stage: build
     tags:
