--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,23 @@ build-nolapack:
       - export CXXFLAGS="-O3 -pipe -Wall -Werror -Wpedantic -pedantic-errors  -Wextra -Wno-cast-function-type -Wno-error=cast-function-type -Wno-unused-parameter -Wno-error=unused-parameter"
       - eval ! ../configure --prefix=$HOME
 
+nvcc-norun:
+    stage: test
+    script:
+      - perl -pi -e 's/main/main\ contrib\ non-free/g' /etc/apt/sources.list
+      - apt update --quiet
+      - apt install --no-install-recommends -y -qq git ca-certificates ssh g++ gfortran clang make cmake pkg-config libblas-dev liblapack-dev libfftw3-dev libopenmpi-dev openmpi-bin libboost-serialization-dev bzip2 python2 nvidia-cuda-toolkit
+      - mkdir build
+      - cd build
+      - export CUDACXX=/usr/local/cuda/bin/nvcc
+      - export CXXFLAGS="-O3 -Wall -Wextra -Wfatal-errors"
+      - export CUDAFLAGS="$(for x in `mpic++ --showme:incdirs`; do echo -n -I$x" " ; done) -D_DISABLE_CUDA_SLOW -O3 --expt-relaxed-constexpr --expt-extended-lambda --Werror=cross-execution-space-call --compiler-options -Ofast,-std=c++14,-Wall,-Wextra,-Wfatal-errors" \
+LIBS="$(for x in `mpic++ --showme:libs`; do echo -n -l$x" " ; done)"
+      - export LDFLAGS="$(for x in `mpic++ --showme:libdirs`; do echo -n -L$x" " ; done)"
+      - ../../configure --enable-cuda --prefix=`pwd`/../nvcc.install $* \
+      - make
+      - time make -j4 install
+
 gcc:
     stage: build
     script:
@@ -379,15 +396,8 @@ nvcc:
       - if [ -v UPDATE_MULTI ] ; then cd external_libs/multi && git checkout master && git pull && cd - ; fi
       - export PATH=/usr/local/cuda/bin:$PATH
       - nvcc -V
-      - mkdir nvcc
-      - cd nvcc
-      - export CUDACXX=/usr/local/cuda/bin/nvcc
-      - export CUDAFLAGS="$(for x in `mpic++ --showme:incdirs`; do echo -n -I$x" " ; done) -DFMT_USE_UDL_TEMPLATE=0 -D_DISABLE_CUDA_SLOW -O3 --gpu-architecture sm_70 --expt-relaxed-constexpr --expt-extended-lambda --Werror=cross-execution-space-call --compiler-options -Ofast,-std=c++14,-Wall,-Wfatal-errors"
-      - export LDFLAGS=$(for x in `mpic++ --showme:libdirs`; do echo -n -L$x" " ; done)
-      - export LIBS=$(for x in `mpic++ --showme:libs`; do echo -n -l$x" " ; done)
-      - time ../configure --prefix=$HOME --enable-cuda --with-cuda-prefix=/usr/local/cuda
-      - time make -j8
-      - time make -j8 install
+      - cd ci
+      - ./install_nvcc.sh
       - cd src; ctest -V --timeout 360 -j 16; cd ..
       - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 2" ctest -V --timeout 360 -j8; cd ..
       - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 3" ctest -V --timeout 360 -j5; cd ..
@@ -401,5 +411,36 @@ nvcc:
       - time mpirun --oversubscribe -np 3 tests/silicon
       - time mpirun --oversubscribe -np 5 tests/silicon
 
-# vim: set sw=4 ts=4 sts=4 tw=80 et nowrap
+
+#nvcc:
+#    stage: build
+#    tags:
+#      - cuda_gpu
+#    script:
+#      - if [ -v UPDATE_MULTI ] ; then cd external_libs/multi && git checkout master && git pull && cd - ; fi
+#      - export PATH=/usr/local/cuda/bin:$PATH
+#      - nvcc -V
+#      - mkdir nvcc
+#      - cd nvcc
+#      - export CUDACXX=/usr/local/cuda/bin/nvcc
+#      - export CUDAFLAGS="$(for x in `mpic++ --showme:incdirs`; do echo -n -I$x" " ; done) -DFMT_USE_UDL_TEMPLATE=0 -D_DISABLE_CUDA_SLOW -O3 --gpu-architecture sm_70 --expt-relaxed-constexpr --expt-extended-lambda --Werror=cross-execution-space-call --compiler-options -Ofast,-std=c++14,-Wall,-Wfatal-errors"
+#      - export LDFLAGS=$(for x in `mpic++ --showme:libdirs`; do echo -n -L$x" " ; done)
+#      - export LIBS=$(for x in `mpic++ --showme:libs`; do echo -n -l$x" " ; done)
+#      - time ../configure --prefix=$HOME --enable-cuda --with-cuda-prefix=/usr/local/cuda
+#      - time make -j8
+#      - time make -j8 install
+#      - cd src; ctest -V --timeout 360 -j 16; cd ..
+#      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 2" ctest -V --timeout 360 -j8; cd ..
+#      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 3" ctest -V --timeout 360 -j5; cd ..
+#      - cd src; INQ_EXEC_ENV="mpirun --oversubscribe -np 4" ctest -V --timeout 360 -j4; cd ..   
+#      - time tests/hydrogen_local
+#      - time tests/neon
+#      - time tests/h2o_ground_state
+#      - time tests/h2o_real_time
+#      - time tests/silicon
+#      - time mpirun --oversubscribe -np 2 tests/silicon
+#      - time mpirun --oversubscribe -np 3 tests/silicon
+#      - time mpirun --oversubscribe -np 5 tests/silicon
+
+# vim: set sw=2 ts=2 sts=2 tw=80 et nowrap
 
