fixed yaml ci file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,8 +68,8 @@ nvcc-norun:
       - cd build
       - export CUDACXX=/usr/local/cuda/bin/nvcc
       - export CXXFLAGS="-O3 -Wall -Wextra -Wfatal-errors"
-      - export CUDAFLAGS="$(for x in `mpic++ --showme:incdirs`; do echo -n -I$x" " ; done) -D_DISABLE_CUDA_SLOW -O3 --expt-relaxed-constexpr --expt-extended-lambda --Werror=cross-execution-space-call --compiler-options -Ofast,-std=c++14,-Wall,-Wextra,-Wfatal-errors" \
-LIBS="$(for x in `mpic++ --showme:libs`; do echo -n -l$x" " ; done)"
+      - export CUDAFLAGS="$(for x in `mpic++ --showme:incdirs`; do echo -n -I$x" " ; done) -D_DISABLE_CUDA_SLOW -O3 --expt-relaxed-constexpr --expt-extended-lambda --Werror=cross-execution-space-call --compiler-options -Ofast,-std=c++14,-Wall,-Wextra,-Wfatal-errors" 
+      - export LIBS="$(for x in `mpic++ --showme:libs`; do echo -n -l$x" " ; done)"
       - export LDFLAGS="$(for x in `mpic++ --showme:libdirs`; do echo -n -L$x" " ; done)"
       - ../../configure --enable-cuda --prefix=`pwd`/../nvcc.install $* \
       - make
