--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ set(INCXX scripts/inc++)
 if(ENABLE_CUDA)
 set(INCPP_COMPILER ${CMAKE_CUDA_COMPILER})
 set(INCPP_FLAGS ${CMAKE_CUDA_FLAGS})
+string(APPEND INCPP_FLAGS " -x cu ")
 else()
 set(INCPP_COMPILER ${CMAKE_CXX_COMPILER})
 set(INCPP_FLAGS ${CMAKE_CXX_FLAGS})
