--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -474,6 +474,7 @@ nvcc-ompi-compileonly:
       - export PREFIX=`mktemp -d`
       - if [ -v UPDATE_MULTI ] ; then cd external_libs/multi && git checkout master && git pull && cd - ; fi
       - nvcc -V
+      - mkdir build && cd build
       - CUDACXX=/usr/local/cuda/bin/nvcc ../configure --prefix=$PREFIX --enable-cuda --disable-debug --with-cuda-prefix=/usr/local/cuda --pass-thru -DCMAKE_CUDA_ARCHITECTURES=70
       - make
 
