--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -573,7 +573,8 @@ nvcc-ompi-fast:
       - CUDACXX=/usr/local/cuda/bin/nvcc ../configure --prefix=$PREFIX --enable-cuda --disable-debug --with-cuda-prefix=/usr/local/cuda --pass-thru -DCMAKE_CUDA_ARCHITECTURES=70
       - time make -j8
       - time make -j8 install
-      - ctest --output-on-failure --timeout 600
+      - cd src; ctest --output-on-failure --timeout 600; cd ..
+      - cd tests; ctest --output-on-failure --timeout 600; cd ..      
       - cd src; INQ_EXEC_ENV="mpirun -np 2" ctest --output-on-failure --timeout 600; cd ..
       - cd src; INQ_EXEC_ENV="mpirun -np 3" ctest --output-on-failure --timeout 600; cd ..
       - cd src; INQ_EXEC_ENV="mpirun -np 4" ctest --output-on-failure --timeout 600; cd ..
@@ -608,7 +609,8 @@ nvcc-ompi:
       - CUDACXX=/usr/local/cuda/bin/nvcc ../configure --prefix=$PREFIX --enable-cuda --with-cuda-prefix=/usr/local/cuda --disable-debug --pass-thru -DCMAKE_CUDA_ARCHITECTURES=70
       - time make -j8
       - time make -j8 install
-      - ctest --output-on-failure --timeout 600
+      - cd src; ctest --output-on-failure --timeout 600; cd ..
+      - cd tests; ctest --output-on-failure --timeout 600; cd ..      
       - cd src; INQ_EXEC_ENV="mpirun -np 2" ctest --output-on-failure --timeout 600; cd ..
       - cd src; INQ_EXEC_ENV="mpirun -np 3" ctest --output-on-failure --timeout 600; cd ..
       - cd src; INQ_EXEC_ENV="mpirun -np 4" ctest --output-on-failure --timeout 600; cd ..
