Look for fftw3f too.

--- a/scripts/inc++.bash.in
+++ b/scripts/inc++.bash.in
@@ -26,7 +26,7 @@ else
     #we are linking too
     cxx="@INCPP_COMPILER@"
     ldflags="@CMAKE_EXE_LINKER_FLAGS@ "
-    libs="@spglib_LIBRARIES@ @Libxc_LIBRARIES@ @Heffte_LIBRARIES@ @LAPACK_LIBRARIES@ @BLAS_LIBRARIES@ @INQ_CUDA_LIBRARIES@ -L@Boost_LIBRARY_DIRS@ -lboost_serialization -lboost_filesystem -lboost_system  @FFTW_LDFLAGS@ @CMAKE_CXX_STANDARD_LIBRARIES@ @MPI_CXX_LIBRARIES@"
+    libs="@spglib_LIBRARIES@ @Libxc_LIBRARIES@ @Heffte_LIBRARIES@ @FFTW_LDFLAGS@ -lfftw3f @LAPACK_LIBRARIES@ @BLAS_LIBRARIES@ @INQ_CUDA_LIBRARIES@ -L@Boost_LIBRARY_DIRS@ -lboost_serialization -lboost_filesystem -lboost_system @CMAKE_CXX_STANDARD_LIBRARIES@ @MPI_CXX_LIBRARIES@"
 fi
 
 includeflags="-I@spglib_INCLUDE_DIRS@            \
